VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/encrypt.cpp.xilinx-performance-pragma-detector.err.log
In file included from /home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/encrypt.cpp:2:
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/aes.hpp:18:46: error: Invalid Directive: for current device, ROM_nP + BRAM is invalid combination for BIND_STORAGE's option 'type + impl'
#pragma HLS bind_storage variable=ssbox type=ROM_nP impl=BRAM
                                             ^
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/aes.hpp:19:46: error: Invalid Directive: for current device, ROM_nP + BRAM is invalid combination for BIND_STORAGE's option 'type + impl'
#pragma HLS bind_storage variable=iibox type=ROM_nP impl=BRAM
                                             ^
